--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node dist/index.js",
     "dev": "nodemon --watch src --ext ts --exec \"node --loader ts-node/esm --experimental-specifier-resolution=node\" src/index.ts"
   },
+  "engines": { "node": "24.x" },
   "keywords": [],
   "author": "",
   "license": "ISC",
