--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "type": "module",
   "name": "eventark-backend",
   "version": "1.0.0",
-  "scripts": {
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "nodemon --watch src --ext ts --exec \"node --loader ts-node/esm --experimental-specifier-resolution=node\" src/index.ts"
-  },
+ "scripts": {
+  "build": "tsc",
+  "start": "node dist/index.js",
+  "dev": "nodemon --watch src --ext ts --exec ts-node src/index.ts"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
