--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "eventark-backend",
   "version": "1.0.0",
- "scripts": {
-  "build": "tsc",
-  "start": "node dist/index.js",
-  "dev": "nodemon --watch src --ext ts --exec ts-node src/index.ts"
-},
+  "scripts": {
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "nodemon --watch src --ext ts --exec ts-node src/index.ts"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -14,6 +14,7 @@
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.1",
+    "connect-mongo": "^6.0.0",
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
@@ -44,7 +45,7 @@
     "typescript": "^5.8.3"
   },
   "engines": {
-  "node": "18.x"
-},
+    "node": "18.x"
+  },
   "packageManager": "yarn@3.8.5+sha256.6fd0fd785cdf2b18a9a9e2589726a11530ff018d193f8eda64be485a080f75b9"
 }
